# JpegPdfConverter

./: .replit  README.md  main.py  pyproject.toml  replit.nix  sw.js
attached_assets/: Pasted--DOCTYPE-html-html-lang-fr-if-session-get-lang-fr-else-en-data-bs-theme-dark-1744909728079.txt  Pasted--script-data-cfasync-false-type-text-javascript-var-K-ChmaorrCfozdgenziMrattShzzyrtarnedp-1744320604908.txt  Pasted--script-data-cfasync-false-type-text-javascript-var-K-ChmaorrCfozdgenziMrattShzzyrtarnedp-1744321155760.txt  Pasted--script-data-cfasync-false-type-text-javascript-var-K-ChmaorrCfozdgenziMrattShzzyrtarnedp-1744321416516.txt  Pasted--script-data-cfasync-false-type-text-javascript-var-K-ChmaorrCfozdgenziMrattShzzyrtarnedp-1744911176447.txt  Pasted--script-data-cfasync-false-type-text-javascript-var-K-ChmaorrCfozdgenziMrattShzzyrtarnedp-1744911695818.txt  Pasted--workspace-ls-attached-assets-main-py-pyproject-toml-static-templates-generated-ico-1744319088490.txt  sw.js
static/css/: styles.css
static/js/: ads.js  script.js
templates/: index.html
